Share Robolectric JVM setup in a convention plugin
Want to avoid running API 37 on JDK 17.

Also we already have the add-opens defined, but started to list them again.